* Corrected permissions issue for editing assembly (Chris T)
* Database administration interface more consistent (Chris T)
* Backup functionality moved to database administration interface (Chris T)
* Default language handling for invoices (Herman V)
* Fixed LaTeX errors in timecard templates (Chris T)
* Reduced warnings in logs (Chris T)

Changelog for LedgerSMB 1.3.6
* Including xelatex templates under directory templates/xedemo (Chris T)
* Fix for company name in order entry (David B)
* Corrected UI dropdown box issue on ar/ap transaction screen (Herman V)
* Corrected minor workflow issues on AR/AP transactions (Herman V)
* Corrected permissions for users creating employee records (Chris T)
* Corrected error when trying to save employee location as new (Chris T)
* Corrected save as new overwriting existing for vendors/customers (Chris T)
* Logging improvements (Herman V)
* Fixed SQL errors in Goods and Services/All Items report (David B)
* Corrected issue saving country in contact.html (Pongracz I)
* Corrected permission denied to partsgroup_id_seq (Chris T)
* Corrected discount_terms not being displayed after saving (Chris T)
* Corrected language drop-down missing from email form (Chris T)
* Customer search result label correction (Herman V)
* Company name can now be prepopulated on login screen (Chris T)
* Corrected SQL error in OE.pm (Herman V)

Chris T is Chris Travers
David B is David Bandel
Herman V is Herman Vierendeels
Pongracz I is Pongracz Istvan

Changelog for LedgerSMB 1.3.5
* Fixing Menu and Permissions bug 3430820 (Chris T)
* Fixing permissions bug 3433644 (Chris T)
* Fixing file not found printing HTML invoice (Chris T)
* Corrected join issues in generating sales orders (Erik H)
* Removed commits in child subroutines (Herman V)
* Correcting warnings about HOME not set (Chris T)
* Corrected debian-specific db creation issue (Pongracz I)
* Corrected company name representation in timecard->sales order (Chris T)